[package]
name = "luxun-dairy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "luxun_dairy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = { version = "2" }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nostr-sdk = {version = "0.42.0", features = ["nip44", "nip59"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
uuid = { version = "1.17", features = ["v4"] }
hex = "0.4.3"
rusqlite = { version = "0.37.0", features = ["chrono", "bundled"] }
time = "0.3"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rand = "0.9.1"
futures = "0.3.31"

